--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nithish kumar</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.ico?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,15 +17,15 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud"src="/images'/cloud.png">
+        <img class="top-cloud"src="cloud.png">
         <h1>I'm Nithish</h1>
         <h2>A webdeveloper</h2>
-        <img class="bottom-cloud" src="/images'/cloud.png">
-        <img  src="/images'/mountain.png">
+        <img class="bottom-cloud" src="cloud.png">
+        <img  src="mountain.png">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img src="images'/nkt-twit-modified.png" alt="Nithish profile photo">
+            <img src="nkt-twit-modified.png" alt="Nithish profile photo">
             <h2>Hello.</h2>
             <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
         </div>
@@ -34,13 +34,13 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="image" src="/images'/coding.png" alt="coding image">
+                <img class="image" src="coding.png" alt="coding image">
                 <h3>Lorem & Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus,
                     erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="img-2" src="/images'/engineering.png" alt="">
+                <img class="img-2" src="engineering.png" alt="">
                 <h3>Lorem Ipsum Dolor</h3>
                 <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris.
                     Curabitur wisi, quisque vel eu, rutrum nam.</p>
